@@ -5,7 +5,7 @@
    <viewlet name="plone.header"/>
    <viewlet name="plone.path_bar"/>
    <viewlet name="xm.searchbox"/>
-   <viewlet name="plone.personal_bar"/>
+   <viewlet name="xm.personal_bar"/>
 </order>
 
  <order manager="plone.portalheader" skinname="eXtremeManagement">
@@ -23,6 +23,8 @@
 
  <hidden manager="plone.portaltop" skinname="eXtremeManagement" purge="True">
    <viewlet name="plone.app.i18n.locales.languageselector"/>
+   <viewlet name="plone.personal_bar"/>
+   
  </hidden>
 
  <hidden manager="plone.portalheader" skinname="eXtremeManagement">
